--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,2 +1,2 @@
-/config/other/** @tolebiermekov
-/config/other/**/shared/** @ml24-sys
+config/other/** @tolebiermekov
+config/other/**/shared/** @ml24-sys
