--- a/.github/workflows/check-approval.yml
+++ b/.github/workflows/check-approval.yml
@@ -12,31 +12,48 @@ jobs:
   check-approvals:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repository
+      - name: 📥 Checkout repository
         uses: actions/checkout@v4
 
-      - name: Set up Python
+      - name: 🐍 Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.12'
+          python-version: '3.10'
 
       - name: 📦 Install Python dependencies
-        run: pip install requests pathspec
+        run: pip install pathspec # requests больше не нужен, но pathspec все еще необходим
 
-      - name: Check Approvals (Python)
+      - name: 🕵️ Check Approvals (Python)
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
+          python - <<EOF
           import os
           import sys
           import json
-          import requests
           import pathspec
+          import urllib.request # <-- Используем стандартную библиотеку
+          import urllib.error
           
+          # --- 0. Helper functions ---
           def fail(message):
               print(f"::error::{message}")
               sys.exit(1)
           
+          def make_request(url, headers):
+              """Helper to make GitHub API requests using standard library"""
+              req = urllib.request.Request(url, headers=headers)
+              try:
+                  with urllib.request.urlopen(req) as response:
+                      if response.status >= 300:
+                          fail(f"API request failed with status {response.status}: {response.read().decode()}")
+                      return json.loads(response.read().decode('utf-8'))
+              except urllib.error.HTTPError as e:
+                  fail(f"HTTPError when requesting {url}: {e.code} {e.reason}")
+              except Exception as e:
+                  fail(f"Failed during request to {url}: {e}")
+
+          # --- 1. Get Context and Headers ---
           TOKEN = os.environ['GITHUB_TOKEN']
           HEADERS = {'Authorization': f'token {TOKEN}', 'Accept': 'application/vnd.github.v3+json'}
           
@@ -52,7 +69,7 @@ jobs:
               
           CODEOWNERS_FILE = '.github/CODEOWNERS-DWH'
           
-          # Parse the CODEOWNERS-DWH
+          # --- 2. Parse the CODEOWNERS-DWH file (with fixes) ---
           rules = []
           try:
               with open(CODEOWNERS_FILE, 'r') as f:
@@ -65,11 +82,13 @@ jobs:
                       raw_pattern = parts[0]
                       owner_strings = parts[1:]
                       
+                      # --- TRIPLE FIX ---
                       pattern = '**' if raw_pattern == '*' else raw_pattern
                       if pattern.endswith('/') and len(pattern) > 1:
                           pattern += '**'
                       if pattern.startswith('/'):
                           pattern = pattern[1:]
+                      # --- End Fix ---
                       
                       owners = set(o.replace('@', '') for o in owner_strings if '/' not in o)
                       rules.append({'pattern': pattern, 'owners': owners})
@@ -79,23 +98,21 @@ jobs:
           except Exception as e:
               fail(f"Failed to parse {CODEOWNERS_FILE}: {e}")
           
-          # Get all changed files in PR
+          # --- 3. Get all changed files in PR (using urllib) ---
           try:
               files_url = f'https://api.github.com/repos/{owner}/{repo}/pulls/{pr_number}/files'
-              response = requests.get(files_url, headers=HEADERS)
-              response.raise_for_status()
-              changed_files = [f['filename'] for f in response.json()]
+              files_json = make_request(files_url, HEADERS)
+              changed_files = [f['filename'] for f in files_json]
           except Exception as e:
               fail(f"Failed to get changed files: {e}")
           
-          # Get all users who Approved
+          # --- 4. Get all users who clicked 'Approve' (using urllib) ---
           try:
               reviews_url = f'https://api.github.com/repos/{owner}/{repo}/pulls/{pr_number}/reviews'
-              response = requests.get(reviews_url, headers=HEADERS)
-              response.raise_for_status()
+              reviews_json = make_request(reviews_url, HEADERS)
               
               approved_users = set()
-              for review in response.json():
+              for review in reviews_json:
                   if review['state'] == 'APPROVED':
                       approved_users.add(review['user']['login'])
                       
@@ -106,14 +123,14 @@ jobs:
           except Exception as e:
               fail(f"Failed to get reviews: {e}")
           
-          # Checking logic
+          # --- 5. "Per-File" checking logic (NEW: files without owners will FAIL) ---
           all_files_covered = True
           uncovered_files = []
           
           for file in changed_files:
               last_match_owners = None
               
-              # Last Match Wins
+              # Find owners for this file (Last Match Wins)
               for rule in rules:
                   spec = pathspec.PathSpec.from_lines('gitwildmatch', [rule['pattern']])
                   if spec.match_files([file]):
@@ -125,6 +142,7 @@ jobs:
                   uncovered_files.append(f"- {file} (has NO owner assigned in CODEOWNERS-DWH)")
                   continue
               
+              # Check for intersection
               intersection = approved_users.intersection(last_match_owners)
               
               if not intersection:
@@ -133,6 +151,7 @@ jobs:
               else:
                   print(f"File {file} is covered by approval from: {', '.join(intersection)}")
           
+          # --- 6. Final verdict ---
           if all_files_covered:
               print("All changed files are covered by owners.")
           else:
@@ -142,3 +161,4 @@ jobs:
                   f"{'\n'.join(uncovered_files)}"
               )
               fail(error_message)
+          EOF
