--- a/.github/workflows/check-approval.yml
+++ b/.github/workflows/check-approval.yml
@@ -39,12 +39,41 @@ jobs:
               print(f"::error::{message}")
               sys.exit(1)
           
-          # ... (весь код make_request и получение context) ...
+          def make_request(url, headers):
+              req = urllib.request.Request(url, headers=headers)
+              try:
+                  with urllib.request.urlopen(req) as response:
+                      if response.status >= 300:
+                          fail(f"API request failed with status {response.status}: {response.read().decode()}")
+                      return json.loads(response.read().decode('utf-8'))
+              except urllib.error.HTTPError as e:
+                  fail(f"HTTPError when requesting {url}: {e.code} {e.reason}")
+              except Exception as e:
+                  fail(f"Failed during request to {url}: {e}")
+          
+          TOKEN = os.environ['GITHUB_TOKEN']
+          HEADERS = {'Authorization': f'token {TOKEN}', 'Accept': 'application/vnd.github.v3+json'}
+          
+          # -----------------------------------------------------------------
+          # ⬇️ ЭТОТ БЛОК, КОТОРЫЙ У ВАС ПРОПАЛ ⬇️
+          # -----------------------------------------------------------------
+          try:
+              repo_full = os.environ['GITHUB_REPOSITORY']
+              owner, repo = repo_full.split('/')
+          
+              with open(os.environ['GITHUB_EVENT_PATH'], 'r') as f:
+                  event_data = json.load(f)
+              pr_number = event_data['pull_request']['number']
+          except Exception as e:
+              fail(f"Failed to get context: {e}")
+          # -----------------------------------------------------------------
+          # ⬆️ КОНЕЦ БЛОКА ⬆️
+          # -----------------------------------------------------------------
           
           CODEOWNERS_FILE = '.github/CODEOWNERS-DWH'
           
           # -----------------------------------------------------------------
-          # ⬇️⬇️⬇️ ИЗМЕНЕНИЯ ТОЛЬКО ЗДЕСЬ (НОВЫЙ ПАРСЕР) ⬇️⬇️⬇️
+          # ⬇️ ИСПРАВЛЕННЫЙ ПАРСЕР ⬇️
           # -----------------------------------------------------------------
           rules = []
           try:
@@ -60,15 +89,10 @@ jobs:
           
                       pattern = raw_pattern
           
-                      # 1. Глобальный паттерн
                       if pattern == '*':
                           pattern = '**'
-                      # 2. ВСЕГДА убираем / в начале, если он есть
                       elif pattern.startswith('/'):
                           pattern = pattern[1:]
-          
-                      # 3. Больше НЕ добавляем '**' в конце.
-                      # pathspec должен сам справиться с паттерном 'config/other/'
           
                       owners = set(o.replace('@', '') for o in owner_strings if '/' not in o)
                       rules.append({'pattern': pattern, 'owners': owners})
@@ -78,9 +102,8 @@ jobs:
               fail(f"Failed to read {CODEOWNERS_FILE}: File not found.")
           except Exception as e:
               fail(f"Failed to parse {CODEOWNERS_FILE}: {e}")
-          
           # -----------------------------------------------------------------
-          # ⬆️⬆️⬆️ КОНЕЦ ИЗМЕНЕНИЙ ⬆️⬆️⬆️
+          # ⬆️ КОНЕЦ ПАРСЕРА ⬆️
           # -----------------------------------------------------------------
           
           # Get all changed files in PR
@@ -92,7 +115,22 @@ jobs:
           except Exception as e:
               fail(f"Failed to get changed files: {e}")
           
-          # ... (остальной код получения reviews) ...
+          # Get all users who clicked Approved
+          try:
+              reviews_url = f'https://api.github.com/repos/{owner}/{repo}/pulls/{pr_number}/reviews'
+              reviews_json = make_request(reviews_url, HEADERS)
+          
+              approved_users = set()
+              for review in reviews_json:
+                  if review['state'] == 'APPROVED':
+                      approved_users.add(review['user']['login'])
+          
+              if not approved_users:
+                  fail('No "Approve" found on this PR.')
+          
+              print(f"Found approvals from: {', '.join(approved_users)}")
+          except Exception as e:
+              fail(f"Failed to get reviews: {e}")
           
           # Checking logic
           all_files_covered = True
