--- a/.github/workflows/check-approval.yml
+++ b/.github/workflows/check-approval.yml
@@ -31,7 +31,12 @@ jobs:
           import os
           import sys
           import json
-          import pathspec
+          # ⬇️ УДАЛИТЕ 'pathspec' ⬇️
+          # import pathspec
+          
+          # ⬇️ ДОБАВЬТЕ 'fnmatch' ⬇️
+          import fnmatch
+          
           import urllib.request
           import urllib.error
           
@@ -39,98 +44,13 @@ jobs:
               print(f"::error::{message}")
               sys.exit(1)
           
-          def make_request(url, headers):
-              req = urllib.request.Request(url, headers=headers)
-              try:
-                  with urllib.request.urlopen(req) as response:
-                      if response.status >= 300:
-                          fail(f"API request failed with status {response.status}: {response.read().decode()}")
-                      return json.loads(response.read().decode('utf-8'))
-              except urllib.error.HTTPError as e:
-                  fail(f"HTTPError when requesting {url}: {e.code} {e.reason}")
-              except Exception as e:
-                  fail(f"Failed during request to {url}: {e}")
+          # ... (весь код make_request, context, и парсер CODEOWNERS-DWH) ...
+          # ... (весь код get changed files и get reviews) ...
           
-          TOKEN = os.environ['GITHUB_TOKEN']
-          HEADERS = {'Authorization': f'token {TOKEN}', 'Accept': 'application/vnd.github.v3+json'}
           
           # -----------------------------------------------------------------
-          # ⬇️ ЭТОТ БЛОК, КОТОРЫЙ У ВАС ПРОПАЛ ⬇️
+          # ⬇️⬇️⬇️ ПОЛНОСТЬЮ НОВАЯ ЛОГИКА ПРОВЕРКИ ⬇️⬇️⬇️
           # -----------------------------------------------------------------
-          try:
-              repo_full = os.environ['GITHUB_REPOSITORY']
-              owner, repo = repo_full.split('/')
-          
-              with open(os.environ['GITHUB_EVENT_PATH'], 'r') as f:
-                  event_data = json.load(f)
-              pr_number = event_data['pull_request']['number']
-          except Exception as e:
-              fail(f"Failed to get context: {e}")
-          # -----------------------------------------------------------------
-          # ⬆️ КОНЕЦ БЛОКА ⬆️
-          # -----------------------------------------------------------------
-          
-          CODEOWNERS_FILE = '.github/CODEOWNERS-DWH'
-          
-          # -----------------------------------------------------------------
-          # ⬇️ ИСПРАВЛЕННЫЙ ПАРСЕР ⬇️
-          # -----------------------------------------------------------------
-          rules = []
-          try:
-              with open(CODEOWNERS_FILE, 'r') as f:
-                  for line in f:
-                      line = line.strip()
-                      if not line or line.startswith('#'):
-                          continue
-          
-                      parts = line.split()
-                      raw_pattern = parts[0]
-                      owner_strings = parts[1:]
-          
-                      pattern = raw_pattern
-          
-                      if pattern == '*':
-                          pattern = '**'
-                      elif pattern.startswith('/'):
-                          pattern = pattern[1:]
-          
-                      owners = set(o.replace('@', '') for o in owner_strings if '/' not in o)
-                      rules.append({'pattern': pattern, 'owners': owners})
-                      print(f"DEBUG: Loaded rule -> raw='{raw_pattern}', pattern='{pattern}', owners={owners}")
-          
-          except FileNotFoundError:
-              fail(f"Failed to read {CODEOWNERS_FILE}: File not found.")
-          except Exception as e:
-              fail(f"Failed to parse {CODEOWNERS_FILE}: {e}")
-          # -----------------------------------------------------------------
-          # ⬆️ КОНЕЦ ПАРСЕРА ⬆️
-          # -----------------------------------------------------------------
-          
-          # Get all changed files in PR
-          try:
-              files_url = f'https://api.github.com/repos/{owner}/{repo}/pulls/{pr_number}/files'
-              files_json = make_request(files_url, HEADERS)
-              changed_files = [f['filename'] for f in files_json]
-              print(f"DEBUG: Found changed files: {changed_files}")
-          except Exception as e:
-              fail(f"Failed to get changed files: {e}")
-          
-          # Get all users who clicked Approved
-          try:
-              reviews_url = f'https://api.github.com/repos/{owner}/{repo}/pulls/{pr_number}/reviews'
-              reviews_json = make_request(reviews_url, HEADERS)
-          
-              approved_users = set()
-              for review in reviews_json:
-                  if review['state'] == 'APPROVED':
-                      approved_users.add(review['user']['login'])
-          
-              if not approved_users:
-                  fail('No "Approve" found on this PR.')
-          
-              print(f"Found approvals from: {', '.join(approved_users)}")
-          except Exception as e:
-              fail(f"Failed to get reviews: {e}")
           
           # Checking logic
           all_files_covered = True
@@ -142,8 +62,12 @@ jobs:
           
               # Last Match Wins
               for rule in rules:
-                  spec = pathspec.PathSpec.from_lines('gitwildmatch', [rule['pattern']])
-                  if spec.match_files([file]):
+          
+                  # Используем fnmatch вместо pathspec
+                  # 'pattern' из нашего парсера уже готов (например, 'config/other/')
+                  if fnmatch.fnmatch(file, rule['pattern']) or \
+                     (rule['pattern'].endswith('/') and file.startswith(rule['pattern'])):
+          
                       last_match_owners = rule['owners']
                       print(f"DEBUG: -> Matched pattern '{rule['pattern']}', owner is now: {last_match_owners}")
           
